deploy/fancy-agent-app/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fancy-agent-app
  labels:
    app: fancy-agent-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fancy-agent-app
  template:
    metadata:
      labels:
        app: fancy-agent-app
    spec:
      containers:
        - name: fancy-agent-app
          image: registry.cn-beijing.aliyuncs.com/fancycontent/fancy-agent-app
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1000m"
          volumeMounts:
            - name: volumn-sls-fancyagentapp
              mountPath: /app/fancy-agent-app/logs
      volumes:
        - name: volumn-sls-fancyagentapp
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: fancy-agent-app
  labels:
    app: fancy-agent-app
spec:
  ports:
    - name: http
      port: 8901
      protocol: TCP
      targetPort: 8901
  selector:
    app: fancy-agent-app
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fancy-agent-app-route
spec:
  rules:
    - host: agentapi.fancybos.com
      http:
        paths:
          - backend:
              serviceName: fancy-agent-app
              servicePort: 8901
            path: /
